# MissionStatus

./: CMakeLists.txt  README.md  drive_widget.cpp  drive_widget.h  drives.cfg  drives_view.cpp  drives_view.h  machine_detailed_dialog.cpp  machine_detailed_dialog.h  machine_widget.cpp  machine_widget.h  machines.cfg  machines_view.cpp  machines_view.h  main.cpp  mission_status_window.cpp  mission_status_window.h  summary_view.cpp  summary_view.h
images/: HDD.png:Zone.Identifier  hard-drive.png:Zone.Identifier  server.png:Zone.Identifier
